# qucheck

./: .gitignore  LICENSE  README.md  circuit_executor.ipynb  coordinator.py  mutation_test_runner.py  property.py  pyproject.toml  run_mutation_tests.ipynb  test_runner.py  utils.py
case_studies/: multithreaded_test_runner.py  mutation_test_runner.py  qasm_dumper.ipynb  results_visualisation.ipynb  results_visualisation2.ipynb  results_visualisation_(temp_code_backup).ipynb  sampling_experiment.ipynb
case_studies/deutsch_jozsa/: balanced_prop.py  (+9 more)
docs/: quickstart.md
input_generators/: __init__.py  input_generator.py  integer.py  qiskit_uniform_statevector.py  random_eigenvector_unitary_pair.py  random_fourier_transform_state.py  random_pauli_basis_state.py  random_state.py  random_tensor_product_unitary.py  random_unitary.py  random_unitary_with_limited_decimals_eigenvalue.py  random_x_basis_state.py  random_y_basis_state.py  random_z_basis_state.py
qucheck/: coordinator.py  property.py  test_runner.py  utils.py
stats/: assert_entangled.py  assert_most_frequent.py  assertion.py  assertion_def.py  circuit_generator.py  execution_optimizer.py  measurement_configuration.py  measurements.py  statistical_analysis_coordinator.py
tests/: context.py  coordinator_tests.py  input_generator_tests.py  statistical_analysis_tests.py  test_assert_entangled.py  test_assert_most_frequent.py  test_assert_probability.py  test_circuit_generator.py  test_coordinator.py  test_runner_tests.py  test_statistical_analysis.py  test_statistical_analysis_coordinator.py  test_test_runner.py
(+475 files in other folders)
