[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qucheck"
version = "0.0.1"
authors = [
  { name="Gabriel Pontolillo", email="gabriel.pontolillo@kcl.ac.uk" }, { name="Marek Grzesiuk", email="author@example.com" }
]
description = "Property based testing package for Qiskit programs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy >= 1.26.0, <2.0.0",
    "qiskit >= 0.44.1, <1.1.2",
    "qiskit-aer >= 0.12.2",
    "scipy >= 1.11.3"

]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/GabrielPontolillo/qucheck"

[tool.setuptools.packages.find]
include = ["qucheck"]
